Update requirements to remove version constraints
Removed specific versioning for several packages and added matplotlib.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.26.1
-scikit-learn==1.6.1
-xgboost==1.7.5
-pandas==2.2.2
-numpy==2.0.2
-seaborn==0.12.3
-lime==0.2.
-joblib==1.3.2
-imbalanced-learn==0.11.1
+streamlit
+numpy
+pandas
+scikit-learn
+xgboost
+imbalanced-learn
+lime
+joblib
+matplotlib
