--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit
-numpy
-pandas
-scikit-learn
-xgboost
-imbalanced-learn
-lime
-joblib
-matplotlib
+scikit-learn==1.3.2
+xgboost==1.7.6
+pandas==2.1.1
+numpy==1.25.2
+imbalanced-learn==1.11.0
+lime==0.2.2.1
